# IA_Genetique_Reines

./: CMakeLists.txt  README.md  main.cpp  reine.cpp  reine_MPI.cxx
mpi/: main_mpi.cpp  reine.cxx
