cmake_minimum_required(VERSION 3.21)
project(algo_reine_genetique)

set(CMAKE_CXX_STANDARD 14)

add_executable(algo_reine_genetique main.cpp)

#cmake_minimum_required(VERSION 3.21)
#project(algo_reine_genetique)
#
#set(CMAKE_CXX_STANDARD 14)
#
#find_package("C:\\Program Files\\Microsoft MPI\\Bin\\mpiexec.exe")
#
#add_executable(algo_reine_genetique mpi/main_mpi.cpp)
#
#target_link_libraries(algo_reine_genetique PUBLIC MPI::MPI_CXX)
